version 3.0.6
---------------------------

* 2024-05-16 Fixed bug on draw a line from tangent to tangent
* 2024-05-16 Fixed bug on dimension (reported by em-rezende)
* 2024-05-16 Full support for curved type layer (compoundCurve, multiCurve, curvePolygon, multiSurface)
* 2024-02-14 Selecting a point you can choose the "Midpoint between 2 points" option
* 2024-01-19 Fixed bug on selection options (reported by Justin Ralston)
* 2023-10-17 Added Polar Tracking options: additional angles. (inspired by Jonathan GUILLERM)
* 2023-09-29 The form to fill the data does not appear, now it does. (proposed by franksalas1965)
* 2023-09-29 qad offset command now use the native offset function provided by qgis api
* 2023-04-07 pedit now can join multilinestring if composed by only one part.
* 2022-07-27 Fixed bug on intersections between circle and ellipse
* 2022-07-27 Changed algorithm to auto-detect arc and circle
* 2022-07-27 Fixed bug on delete last vertex of a polyline
* 2022-06-20 Fixed bug on OFFSET-tool creates wrong calculations with PLINE-vectors (reported by Atol2022)
* 2022-03-28 Fixed bug on problems using vector layers having a "scale based" visibility (reported by TheLooka)
* 2022-05-29 Fixed bug on Trimming a circle into an arc (reported by Jopie01)
* 2022-05-29 Fixed bug on Error when trying to trim a line to a circle (reported by Jopie01)
* 2022-05-29 Fixed bug on MPOLYGON-tool crashes when trying to use trace-function (reported by Atol2022)

version 3.0.5
---------------------------

* 2021-08-30 Fixed bug on pedit -> join option


version 3.0.4
---------------------------

* 2020-09-10 Fixed bug when rotating, scaling or mirroring symbol entities (reported by Camilo Corredor)
* 2020-09-10 Now QAD honors QGIS's snap settings (ALL LAYERS, ACTIVE LAYER, ADVANCED) (by Olivier Dalang)


version 3.0.3
---------------------------

* 2020-08-12 Fixed bug when changing drafting tool config (e.g. colors, etc.) (reported by sdnxgr)